# discopop-ParEval

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  index.py  index.sh  patch.py  patch_json.py
src/: CMakeLists.txt  driver.cpp  utilities.hpp
src/benchmarks/: CMakeLists.txt
src/benchmarks/dense_la/: CMakeLists.txt
src/benchmarks/dense_la/00_dense_la_lu_decomp/: CMakeLists.txt
src/benchmarks/dense_la/01_dense_la_solve/: CMakeLists.txt
src/benchmarks/dense_la/02_dense_la_gemm/: CMakeLists.txt
src/benchmarks/dense_la/03_dense_la_axpy/: CMakeLists.txt
src/benchmarks/dense_la/04_dense_la_gemv/: CMakeLists.txt
src/benchmarks/fft/: CMakeLists.txt
src/benchmarks/fft/05_fft_inverse_fft/: CMakeLists.txt
src/benchmarks/fft/06_fft_dft/: CMakeLists.txt
src/benchmarks/fft/07_fft_fft_conjugate/: CMakeLists.txt
src/benchmarks/fft/08_fft_split_fft/: CMakeLists.txt
src/benchmarks/fft/09_fft_fft_out_of_place/: CMakeLists.txt
src/benchmarks/geometry/: CMakeLists.txt
src/benchmarks/geometry/10_geometry_convex_hull/: CMakeLists.txt
src/benchmarks/geometry/11_geometry_convex_hull_perimeter/: CMakeLists.txt
src/benchmarks/geometry/12_geometry_smallest_triangle/: CMakeLists.txt  baseline.hpp  cpu.cc
src/benchmarks/geometry/13_geometry_closest_pair_2d/: CMakeLists.txt
src/benchmarks/geometry/14_geometry_closest_pair_1d/: CMakeLists.txt
src/benchmarks/graph/: CMakeLists.txt
src/benchmarks/graph/15_graph_edge_count/: CMakeLists.txt  generated-code.hpp.orig  generated-code.hpp.rej
src/benchmarks/graph/16_graph_largest_component/: CMakeLists.txt
src/benchmarks/graph/17_graph_highest_degree/: CMakeLists.txt
src/benchmarks/graph/18_graph_count_components/: CMakeLists.txt
src/benchmarks/graph/19_graph_shortest_path/: CMakeLists.txt
src/benchmarks/histogram/: CMakeLists.txt
src/benchmarks/histogram/20_histogram_pixel_histogram/: CMakeLists.txt
src/benchmarks/histogram/21_histogram_bin_0-100/: CMakeLists.txt
src/benchmarks/histogram/22_histogram_count_quadrants/: CMakeLists.txt
src/benchmarks/histogram/23_histogram_first_letter_counts/: CMakeLists.txt
src/benchmarks/histogram/24_histogram_count_quartile/: CMakeLists.txt
src/benchmarks/reduce/: CMakeLists.txt
src/benchmarks/reduce/25_reduce_xor/: CMakeLists.txt
src/benchmarks/reduce/26_reduce_product_of_inverses/: CMakeLists.txt
src/benchmarks/reduce/27_reduce_average/: CMakeLists.txt
src/benchmarks/reduce/28_reduce_smallest_odd_number/: CMakeLists.txt
src/benchmarks/reduce/29_reduce_sum_of_min_of_pairs/: CMakeLists.txt
src/benchmarks/scan/: CMakeLists.txt
src/benchmarks/scan/30_scan_prefix_sum/: CMakeLists.txt
src/benchmarks/scan/31_scan_scan_with_min_function/: CMakeLists.txt
src/benchmarks/scan/32_scan_sum_of_prefix_sum_array/: CMakeLists.txt
src/benchmarks/scan/33_scan_reverse_prefix_sum/: CMakeLists.txt
src/benchmarks/scan/34_scan_largest_contiguous_subarray_sum/: CMakeLists.txt
src/benchmarks/search/: CMakeLists.txt
src/benchmarks/search/35_search_search_for_last_struct_by_key/: CMakeLists.txt
src/benchmarks/search/36_search_check_if_array_contains_value/: CMakeLists.txt
src/benchmarks/search/37_search_find_the_closest_number_to_pi/: CMakeLists.txt
src/benchmarks/search/38_search_find_the_first_even_number/: CMakeLists.txt
src/benchmarks/search/39_search_xor_contains/: CMakeLists.txt
src/benchmarks/sort/: CMakeLists.txt
src/benchmarks/sort/40_sort_sort_an_array_of_complex_numbers_by_magnitude/: CMakeLists.txt
src/benchmarks/sort/41_sort_k-th_smallest_element/: CMakeLists.txt
src/benchmarks/sort/42_sort_sorted_ranks/: CMakeLists.txt
src/benchmarks/sort/43_sort_sort_an_array_of_structs_by_key/: CMakeLists.txt
src/benchmarks/sort/44_sort_sort_non-zero_elements/: CMakeLists.txt
src/benchmarks/sparse_la/: CMakeLists.txt
src/benchmarks/sparse_la/45_sparse_la_sparse_solve/: CMakeLists.txt
src/benchmarks/sparse_la/46_sparse_la_spmm/: CMakeLists.txt
src/benchmarks/sparse_la/47_sparse_la_spmv/: CMakeLists.txt
src/benchmarks/sparse_la/48_sparse_la_sparse_axpy/: CMakeLists.txt
src/benchmarks/sparse_la/49_sparse_la_sparse_lu_decomp/: CMakeLists.txt
src/benchmarks/stencil/: CMakeLists.txt
src/benchmarks/stencil/50_stencil_xor_kernel/: CMakeLists.txt
src/benchmarks/stencil/51_stencil_edge_kernel/: CMakeLists.txt
src/benchmarks/stencil/52_stencil_1d_jacobi_3-point_stencil/: CMakeLists.txt
src/benchmarks/stencil/53_stencil_2d_jacobi_5-point_stencil/: CMakeLists.txt
src/benchmarks/stencil/54_stencil_game_of_life/: CMakeLists.txt
src/benchmarks/transform/: CMakeLists.txt
src/benchmarks/transform/55_transform_relu/: CMakeLists.txt
src/benchmarks/transform/56_transform_negate_odds/: CMakeLists.txt
src/benchmarks/transform/57_transform_inverse_offset/: CMakeLists.txt
src/benchmarks/transform/58_transform_squaring/: CMakeLists.txt
src/benchmarks/transform/59_transform_map_function/: CMakeLists.txt
src/code/: 00_dense_la_lu_decomp.cpp  01_dense_la_solve.cpp  02_dense_la_gemm.cpp  03_dense_la_axpy.cpp  04_dense_la_gemv.cpp  05_fft_inverse_fft.cpp  06_fft_dft.cpp  07_fft_fft_conjugate.cpp  08_fft_split_fft.cpp  09_fft_fft_out_of_place.cpp  10_geometry_convex_hull.cpp  11_geometry_convex_hull_perimeter.cpp  12_geometry_smallest_triangle.cpp  13_geometry_closest_pair_2d.cpp  14_geometry_closest_pair_1d.cpp  15_graph_edge_count.cpp  16_graph_largest_component.cpp  17_graph_highest_degree.cpp  18_graph_count_components.cpp  19_graph_shortest_path.cpp  20_histogram_pixel_histogram.cpp  21_histogram_bin_0-100.cpp  22_histogram_count_quadrants.cpp  23_histogram_first_letter_counts.cpp  24_histogram_count_quartile.cpp  25_reduce_xor.cpp  26_reduce_product_of_inverses.cpp  27_reduce_average.cpp  28_reduce_smallest_odd_number.cpp  29_reduce_sum_of_min_of_pairs.cpp  30_scan_prefix_sum.cpp  31_scan_scan_with_min_function.cpp  32_scan_sum_of_prefix_sum_array.cpp  33_scan_reverse_prefix_sum.cpp  34_scan_largest_contiguous_subarray_sum.cpp  35_search_search_for_last_struct_by_key.cpp  36_search_check_if_array_contains_value.cpp  (+23 more)
