add_subdirectory(fft)
add_subdirectory(sort)
add_subdirectory(histogram)
add_subdirectory(graph)
add_subdirectory(scan)
add_subdirectory(dense_la)
add_subdirectory(sparse_la)
add_subdirectory(search)
add_subdirectory(reduce)
add_subdirectory(transform)
add_subdirectory(stencil)
add_subdirectory(geometry)
